--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-LOCAL_DATABASE_URL=""
+LOCAL_DATABASE_URL="postgresql://postgres:130993@localhost:5432/pizza-fresh"
+
+JWT_SECRET="dgdfgdfg34534tergqwer"
